add: adding about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,11 @@
   box-sizing: border-box;
 }
 
+:root{
+  background-color: rgb(31, 41, 55);
+  color: rgb(241, 245, 249);
+}
+
 .background {
   background-image: url("/img/bg.jpg");
   background-size: cover;
